2015-09-25  Rémi Stroh  <remi.stroh@lne.fr>

	stk_param_getdefaultbounds: new feature to define default bounds

	* paramestim/stk_param_getdefaultbounds.m: make it possible to
	define default bounds on parameters for user-defined covariance
	functions.

2015-09-21  Julien Bect  <julien.bect@centralesupelec.fr>

	stk_plot_shadedci.m: Do not call set (h, opt{:}) when opt is empty

	* misc/plot/stk_plot_shadedci.m: Do not call set (h, opt{:}) when
	opt is empty (it makes Octave display all the settings of the
	object with handle h, which was not intended).

2015-09-20  Julien Bect  <julien.bect@centralesupelec.fr>

	stk_plot_shadedci.m: Accept a handle as first input argument.

	* misc/plot/stk_plot_shadedci.m: Accept a handle to an axes object
	as (optional) first input argument and accepts additional
	key-value pairs as well.

	stk_plot1d.m: Fill in DisplayName properties

	* misc/plot/stk_plot1d.m: Fill in the DisplayName properties for
	all the components of the plot, thus making it possible to create
	a legend automatically using: legend ('show').

2015-09-19  Julien Bect  <julien.bect@centralesupelec.fr>

	@stk_dataframe/plot.m: Return vector of handles

	* arrays/@stk_dataframe/plot.m: Return vector of handles

	stk_plot_shadedci.m: Delete invisible area object, return a handle

	* misc/plot/stk_plot_shadedci.m: Delete invisible area object and
	return a handle to the visible one.

2015-09-15  Julien Bect  <julien.bect@centralesupelec.fr>

	README: Fix a typo

	* README: Fix a typo

2015-09-13  Julien Bect  <julien.bect@centralesupelec.fr>

	stk_param_init.m: Improve error message

	* paramestim/stk_param_init.m: Improve error message for
	unsupported covariance functions by reporting the original error
	message.

2015-08-14  Julien Bect  <julien.bect@centralesupelec.fr>

	stk_dominatedhv.m: Tolerate points that do not dominate the ref

	* misc/pareto/stk_dominatedhv.m: Tolerate points that do not
	dominate the reference point.
