@@ -3,7 +3,7 @@
 % CALL: FD = stk_filldist(X, BOX)
 %
 %    computes the fill distance FD of the dataset X in the hyper-rectangle
-%    BOX, using the computational-geometric algorithm of L. Pronzato and 
+%    BOX, using the computational-geometric algorithm of L. Pronzato and
 %    W. G. Muller [1]. Recall that
 %
 %       D = max_{Y in BOX} min_{1 <= i <= n} norm(X(i,:) - Y),         (1)
@@ -40,7 +40,7 @@
 %
 % REFERENCES
 %
-%   [1] Luc Pronzato and Werner G. Müller, "Design of computer 
+%   [1] Luc Pronzato and Werner G. Muller, "Design of computer
 %       experiments: space filling and beyond", Statistics and Computing,
 %       22(3):681-701, 2012.
 %
